--- a/index.html
+++ b/index.html
@@ -2,52 +2,75 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>⭐ YILDIZ – Final Master Build</title>
+<title>⭐ YILDIZ – Ultimate Master Edition</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- =====================================================
+     STYLE SECTION
+===================================================== -->
 <style>
-/* ======================================================
-   GLOBAL
-====================================================== */
-* { box-sizing: border-box; }
+
+/* =====================================================
+   RESET & BASE
+===================================================== */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 html, body {
-  margin: 0;
-  padding: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle at top, #0b102a, #000);
+  margin: 0;
+  padding: 0;
+  background: radial-gradient(circle at top, #090e2a 0%, #000 70%);
   overflow: hidden;
-  font-family: system-ui, -apple-system, Segoe UI, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   user-select: none;
 }
 
-/* ======================================================
-   GAME ROOT
-====================================================== */
-#game {
+/* =====================================================
+   ROOT GAME CONTAINER
+===================================================== */
+#game-root {
   position: relative;
   width: 100%;
   height: 100%;
 }
 
-/* ======================================================
-   SCORE
-====================================================== */
-#scoreBar {
+/* =====================================================
+   TOP HUD
+===================================================== */
+#hud {
   position: absolute;
   top: 10px;
   width: 100%;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 16px;
   color: #fff;
-  font-size: 26px;
-  letter-spacing: 2px;
-  z-index: 10;
+  z-index: 20;
 }
 
-/* ======================================================
-   STARS (HARFLER)
-====================================================== */
+.hud-block {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+/* =====================================================
+   BACKGROUND STARS (PARALLAX)
+===================================================== */
+.bg-star {
+  position: absolute;
+  color: rgba(255,255,255,0.2);
+  font-size: 10px;
+  pointer-events: none;
+}
+
+/* =====================================================
+   FALLING STAR LETTERS
+===================================================== */
 .star {
   position: absolute;
   font-size: 42px;
@@ -55,282 +78,383 @@ html, body {
   text-shadow:
     0 0 10px gold,
     0 0 20px gold,
-    0 0 40px orange;
+    0 0 35px orange;
 }
 
-/* ======================================================
-   BASKET (SEPET)
-====================================================== */
+/* =====================================================
+   BASKET
+===================================================== */
 #basket {
   position: absolute;
-  bottom: 80px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 120px;
-  height: 40px;
-  border-radius: 20px;
-  background: linear-gradient(180deg, #ff3b3b, #a40000);
-  box-shadow: 0 0 20px red;
+  bottom: 90px;
+  width: 140px;
+  height: 42px;
+  border-radius: 24px;
+  background: linear-gradient(180deg, #ff4b4b, #900);
+  box-shadow: 0 0 25px rgba(255,0,0,0.6);
 }
 
-/* ======================================================
-   BOXES
-====================================================== */
-#boxes {
+/* =====================================================
+   LETTER BOXES
+===================================================== */
+#letter-boxes {
   position: absolute;
   bottom: 20px;
   width: 100%;
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 12px;
 }
 
-.box {
-  width: 50px;
-  height: 50px;
+.letter-box {
+  width: 54px;
+  height: 54px;
   border: 2px solid #fff;
-  color: #fff;
+  background: rgba(255,255,255,0.05);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 26px;
-  background: rgba(255,255,255,0.05);
+  color: #fff;
 }
 
-.box.filled {
+.letter-box.filled {
   background: gold;
   color: #000;
-  animation: pop 0.4s ease;
+  animation: fillPop 0.4s ease;
 }
 
-@keyframes pop {
+@keyframes fillPop {
   0% { transform: scale(1); }
-  50% { transform: scale(1.35); }
+  50% { transform: scale(1.4); }
   100% { transform: scale(1); }
 }
 
-/* ======================================================
-   FINAL
-====================================================== */
-#finalScreen {
+/* =====================================================
+   LEVEL BANNER
+===================================================== */
+#level-banner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  color: gold;
+  display: none;
+  z-index: 40;
+}
+
+/* =====================================================
+   FINAL SCREEN
+===================================================== */
+#final-screen {
   position: absolute;
   inset: 0;
-  background: rgba(0,0,0,0.92);
+  background: rgba(0,0,0,0.94);
   display: none;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   color: #fff;
-  z-index: 50;
+  z-index: 100;
   text-align: center;
 }
 
-#finalScreen h1 {
-  font-size: 42px;
+#final-screen h1 {
+  font-size: 44px;
   margin-bottom: 20px;
 }
 
-#finalScreen button {
-  padding: 14px 30px;
+#final-screen button {
+  padding: 16px 36px;
   font-size: 18px;
   border: none;
-  cursor: pointer;
   background: gold;
+  cursor: pointer;
   color: #000;
 }
+
 </style>
 </head>
 
 <body>
-<div id="game">
 
-  <div id="scoreBar">⭐ YILDIZ: <span id="score">0</span></div>
+<div id="game-root">
 
+  <!-- HUD -->
+  <div id="hud">
+    <div class="hud-block">⭐ Skor: <span id="score">0</span></div>
+    <div class="hud-block">🎮 Level: <span id="level">1</span></div>
+  </div>
+
+  <!-- Level Banner -->
+  <div id="level-banner"></div>
+
+  <!-- Basket -->
   <div id="basket"></div>
 
-  <div id="boxes"></div>
+  <!-- Letter Boxes -->
+  <div id="letter-boxes"></div>
 
-  <div id="finalScreen">
+  <!-- Final -->
+  <div id="final-screen">
     <h1>💛 SEN BENİM YILDIZIMSIN 💛</h1>
-    <p>Bu oyun bitti ama hisler bitmez.</p>
-    <button onclick="restartGame()">Tekrar Oyna</button>
+    <p>Bu oyunun sonu yok…</p>
+    <button onclick="Game.restart()">Tekrar Oyna</button>
   </div>
 
 </div>
 
+<!-- =====================================================
+     SCRIPT SECTION
+===================================================== -->
 <script>
-/* ======================================================
-   CORE STATE
-====================================================== */
-const LETTERS = ["Y","I","L","D","I","Z"];
-let activeLetters = [...LETTERS];
-let boxes = {};
-let stars = [];
-let score = 0;
-let speed = 1.4;
-let gameOver = false;
 
-/* ======================================================
-   ELEMENTS
-====================================================== */
-const game = document.getElementById("game");
-const basket = document.getElementById("basket");
-const scoreEl = document.getElementById("score");
-const finalScreen = document.getElementById("finalScreen");
+/* =====================================================
+   GAME CONFIG
+===================================================== */
+const CONFIG = {
+  letters: ["Y","I","L","D","I","Z"],
+  baseSpeed: 1.4,
+  spawnRate: 900,
+  speedIncrement: 0.25
+};
 
-/* ======================================================
-   BOX INIT
-====================================================== */
-const boxesDiv = document.getElementById("boxes");
-LETTERS.forEach(l => {
-  const b = document.createElement("div");
-  b.className = "box";
-  b.textContent = l;
-  boxesDiv.appendChild(b);
-  boxes[l] = { el: b, filled: false };
-});
+/* =====================================================
+   CORE GAME OBJECT
+===================================================== */
+const Game = {
+  state: {
+    score: 0,
+    level: 1,
+    speed: CONFIG.baseSpeed,
+    activeLetters: [],
+    stars: [],
+    gameOver: false
+  },
 
-/* ======================================================
-   INPUT (SEPET)
-====================================================== */
-let basketX = window.innerWidth / 2;
+  elements: {},
 
-function moveBasket(x) {
-  basketX = Math.max(60, Math.min(window.innerWidth - 60, x));
-  basket.style.left = basketX + "px";
-}
+  init() {
+    this.cacheElements();
+    this.createBoxes();
+    this.resetLetters();
+    this.bindInput();
+    Background.init();
+    Loop.start();
+    Spawner.start();
+  },
 
-window.addEventListener("mousemove", e => moveBasket(e.clientX));
-window.addEventListener("touchmove", e => {
-  moveBasket(e.touches[0].clientX);
-});
+  cacheElements() {
+    this.elements.root = document.getElementById("game-root");
+    this.elements.basket = document.getElementById("basket");
+    this.elements.score = document.getElementById("score");
+    this.elements.level = document.getElementById("level");
+    this.elements.banner = document.getElementById("level-banner");
+    this.elements.final = document.getElementById("final-screen");
+    this.elements.boxes = document.getElementById("letter-boxes");
+  },
 
-/* ======================================================
-   STAR CREATE
-====================================================== */
-function spawnStar() {
-  if (gameOver) return;
-  if (activeLetters.length === 0) return;
+  createBoxes() {
+    CONFIG.letters.forEach(l => {
+      const b = document.createElement("div");
+      b.className = "letter-box";
+      b.textContent = l;
+      this.elements.boxes.appendChild(b);
+      this.state.activeLetters.push({ letter: l, filled: false, el: b });
+    });
+  },
 
-  const letter = activeLetters[Math.floor(Math.random() * activeLetters.length)];
-  const el = document.createElement("div");
+  resetLetters() {
+    this.state.activeLetters.forEach(l => {
+      l.filled = false;
+      l.el.classList.remove("filled");
+    });
+  },
 
-  el.className = "star";
-  el.textContent = "⭐" + letter;
-  el.style.left = Math.random() * (window.innerWidth - 40) + "px";
-  el.style.top = "-60px";
+  bindInput() {
+    window.addEventListener("mousemove", e => this.moveBasket(e.clientX));
+    window.addEventListener("touchmove", e => {
+      this.moveBasket(e.touches[0].clientX);
+    });
+  },
 
-  game.appendChild(el);
+  moveBasket(x) {
+    const w = window.innerWidth;
+    const clamped = Math.max(70, Math.min(w - 70, x));
+    this.elements.basket.style.left = clamped + "px";
+  },
 
-  stars.push({
-    el,
-    letter,
-    x: el.offsetLeft,
-    y: -60
-  });
-}
+  catchStar(star) {
+    const box = this.state.activeLetters.find(l => l.letter === star.letter && !l.filled);
+    if (!box) return;
 
-/* ======================================================
-   COLLISION
-====================================================== */
-function isColliding(star) {
-  const starRect = star.el.getBoundingClientRect();
-  const basketRect = basket.getBoundingClientRect();
-
-  return !(
-    starRect.bottom < basketRect.top ||
-    starRect.top > basketRect.bottom ||
-    starRect.right < basketRect.left ||
-    starRect.left > basketRect.right
-  );
-}
-
-/* ======================================================
-   GAME LOOP
-====================================================== */
-function update() {
-  if (gameOver) return;
-
-  stars.forEach((s, i) => {
-    s.y += speed;
-    s.el.style.top = s.y + "px";
-
-    if (isColliding(s)) {
-      catchStar(s, i);
-    } else if (s.y > window.innerHeight) {
-      removeStar(i);
-    }
-  });
-
-  requestAnimationFrame(update);
-}
-
-/* ======================================================
-   CATCH LOGIC
-====================================================== */
-function catchStar(star, index) {
-  const box = boxes[star.letter];
-
-  if (!box.filled) {
     box.filled = true;
     box.el.classList.add("filled");
 
-    score += 100;
-    scoreEl.textContent = score;
+    this.state.score += 100;
+    this.elements.score.textContent = this.state.score;
 
-    activeLetters = activeLetters.filter(l => l !== star.letter);
-    speed += 0.3;
+    this.state.speed += CONFIG.speedIncrement;
 
-    miniCelebrate();
+    Effects.miniCelebrate();
 
-    if (activeLetters.length === 0) {
-      endGame();
+    if (this.state.activeLetters.every(l => l.filled)) {
+      this.nextLevel();
+    }
+  },
+
+  nextLevel() {
+    this.state.level++;
+    this.elements.level.textContent = this.state.level;
+
+    this.elements.banner.textContent = "LEVEL " + this.state.level;
+    this.elements.banner.style.display = "block";
+
+    setTimeout(() => {
+      this.elements.banner.style.display = "none";
+      this.resetLetters();
+    }, 1500);
+  },
+
+  end() {
+    this.state.gameOver = true;
+    this.elements.final.style.display = "flex";
+  },
+
+  restart() {
+    location.reload();
+  }
+};
+
+/* =====================================================
+   STAR SPAWNER
+===================================================== */
+const Spawner = {
+  timer: null,
+
+  start() {
+    this.timer = setInterval(() => {
+      if (Game.state.gameOver) return;
+      this.spawn();
+    }, CONFIG.spawnRate);
+  },
+
+  spawn() {
+    const available = Game.state.activeLetters.filter(l => !l.filled);
+    if (!available.length) return;
+
+    const letter = available[Math.floor(Math.random() * available.length)].letter;
+
+    const el = document.createElement("div");
+    el.className = "star";
+    el.textContent = "⭐" + letter;
+    el.style.left = Math.random() * (window.innerWidth - 40) + "px";
+    el.style.top = "-60px";
+
+    Game.elements.root.appendChild(el);
+
+    Game.state.stars.push({
+      el,
+      letter,
+      y: -60
+    });
+  }
+};
+
+/* =====================================================
+   BACKGROUND PARALLAX
+===================================================== */
+const Background = {
+  stars: [],
+
+  init() {
+    for (let i = 0; i < 60; i++) {
+      const s = document.createElement("div");
+      s.className = "bg-star";
+      s.textContent = "✦";
+      s.style.left = Math.random() * window.innerWidth + "px";
+      s.style.top = Math.random() * window.innerHeight + "px";
+      document.body.appendChild(s);
+      this.stars.push(s);
+    }
+  },
+
+  update() {
+    this.stars.forEach(s => {
+      let y = parseFloat(s.style.top);
+      y += 0.15;
+      if (y > window.innerHeight) y = 0;
+      s.style.top = y + "px";
+    });
+  }
+};
+
+/* =====================================================
+   EFFECTS
+===================================================== */
+const Effects = {
+  miniCelebrate() {
+    for (let i = 0; i < 10; i++) {
+      const h = document.createElement("div");
+      h.textContent = "💛";
+      h.style.position = "absolute";
+      h.style.left = Math.random() * window.innerWidth + "px";
+      h.style.top = Math.random() * window.innerHeight + "px";
+      document.body.appendChild(h);
+      setTimeout(() => h.remove(), 700);
     }
   }
+};
 
-  removeStar(index);
-}
+/* =====================================================
+   MAIN LOOP
+===================================================== */
+const Loop = {
+  start() {
+    requestAnimationFrame(this.update.bind(this));
+  },
 
-function removeStar(index) {
-  stars[index].el.remove();
-  stars.splice(index, 1);
-}
+  update() {
+    if (!Game.state.gameOver) {
+      Game.state.stars.forEach((s, i) => {
+        s.y += Game.state.speed;
+        s.el.style.top = s.y + "px";
 
-/* ======================================================
-   EFFECT
-====================================================== */
-function miniCelebrate() {
-  for (let i = 0; i < 12; i++) {
-    const h = document.createElement("div");
-    h.textContent = "💛";
-    h.style.position = "absolute";
-    h.style.left = Math.random() * window.innerWidth + "px";
-    h.style.top = Math.random() * window.innerHeight + "px";
-    document.body.appendChild(h);
-    setTimeout(() => h.remove(), 700);
+        if (this.collide(s.el, Game.elements.basket)) {
+          Game.catchStar(s);
+          s.el.remove();
+          Game.state.stars.splice(i, 1);
+        } else if (s.y > window.innerHeight) {
+          s.el.remove();
+          Game.state.stars.splice(i, 1);
+        }
+      });
+
+      Background.update();
+    }
+
+    requestAnimationFrame(this.update.bind(this));
+  },
+
+  collide(a, b) {
+    const r1 = a.getBoundingClientRect();
+    const r2 = b.getBoundingClientRect();
+
+    return !(
+      r1.bottom < r2.top ||
+      r1.top > r2.bottom ||
+      r1.right < r2.left ||
+      r1.left > r2.right
+    );
   }
-}
+};
 
-/* ======================================================
-   END GAME
-====================================================== */
-function endGame() {
-  gameOver = true;
-  finalScreen.style.display = "flex";
-}
+/* =====================================================
+   START GAME
+===================================================== */
+Game.init();
 
-/* ======================================================
-   RESTART
-====================================================== */
-function restartGame() {
-  location.reload();
-}
-
-/* ======================================================
-   TIMERS
-====================================================== */
-setInterval(spawnStar, 850);
-update();
 </script>
 </body>
 </html>
